Contact form submit button styling, contact page alignment fixes

--- a/style.css
+++ b/style.css
@@ -450,6 +450,10 @@ article nav a {		display: block; }
 		line-height: 165%;
 	}
 
+	#contact form {
+		margin-top: 24px;
+	}
+
 	#contact >  p:first-of-type {
 		border-bottom: solid 1px #dcdcdc;
 		padding: 0 0 24px 0;
@@ -476,6 +480,7 @@ article nav a {		display: block; }
 	}
 
 	#contact form textarea {
+		font-family: 'Open Sans', sans-serif;
 		float: none;
 		clear: right;
 		font-size: 10pt;
@@ -490,17 +495,34 @@ article nav a {		display: block; }
 	#contact form input[type="submit"] {
 		float: none;
 		clear: both;
-		background-color: #32aaaa;
+		height: 40px;
+		background-image: url('images/submit-button-background.png');
+		background-repeat: repeat-x;
 		color: #fff;
-		border: none;
+		text-shadow: 0 -1px 0 #199;
+		border-top: solid 1px #ccffff;
+		border-bottom: solid 1px #50b4b4;
 		width: 120px;
-		margin: 12px auto;
+		margin: 24px auto 0 auto;
+	}
+
+	#contact form input[type="submit"]:hover {
+		background-position: 0 -40px;
+	}
+
+	#contact form input[type="submit"]:active {
+		background-position: 0 -80px;
+	}
+
+	#contact form strong {
+		color: #555;
 	}
 
 	#contact iframe {
 		width: 0;
 		height: 0;
 		border: 0;
+		display: none;
 	}
 
 	#contact img {
@@ -521,35 +543,49 @@ article nav a {		display: block; }
 	#contact section {
 		border-top: solid 1px #fff;
 		border-bottom: solid 1px #dcdcdc;
-		padding-bottom: 24px;
+		padding: 24px 0;
 	}
 
-	#contact h3 {
+	#contact section h3 {
 		color: #555;
+		margin-top: 0;
 	}
 
-	#contact > figure {
+	#contact section p:last-of-type {
+		margin-bottom: 0;
+	}
+
+	#contact section:first-of-type {
+		border-top: none;
+		padding-top: 0;
+	}
+
+	#contact section:last-of-type {
+		border-bottom: none;
+	}
+
+	#contact section:last-of-type {
 		display: block;
 		margin: 0;
 		border-top: solid 1px #fff;
 		padding: 24px 0;
 	}
 
-	#contact > figure img {
-		margin: 0 0 0 36px;
+	#contact section:last-of-type img {
+		margin-left: 36px;
 		float: right;
 	}
 
-	#contact > figure p {
+	#contact section:last-of-type p {
 		margin-bottom: 36px;
 	}
 
-	#contact > figure p strong {
+	#contact section:last-of-type p strong {
 		display: block;
 		margin-bottom: 4px;
 	}
 
-	#contact > figure:after {
+	#contact section:last-of-type:after {
 		content: ".";
 		display: block;
 		height: 0;
